placeholders to stop layout jumping

--- a/src/components/animated-plot/animated-plot.css
+++ b/src/components/animated-plot/animated-plot.css
@@ -14,3 +14,8 @@
     height: 300px;
 }
 
+.animated-plot .placeholder2 {
+    width: 800px;
+    height: 192px;
+}
+
